--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,14 @@
 #CPMULTIPLANE_REPO=/path/to/local-mp-repo
 #COCKPIT_REPO=/path/to/local-cp-repo
 #PORT=80
+#DOCKER_USER=1000
+#DOCKER_GROUP=1000
+#MAILER_FROM=noreply@example.com
+#MAILER_FROM_NAME=Web form
+#MAILER_TRANSPORT=smtp
+#MAILER_HOST=
+#MAILER_USER=
+#MAILER_PASSWORD=
+#MAILER_PORT=587
+#MAILER_AUTH=1
+#MAILER_ENCRYPTION=ssl
